Design: CSS - 헤더 디자인

--- a/css/reset.css
+++ b/css/reset.css
@@ -2,8 +2,14 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  font-size: 62.5%;
+  line-height: 1.285;
+}
 body {
   font-family: 'Nunito Sans', sans-serif;
+  margin: 0;
 }
 
 h1,
