--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,48 @@
 
   --color-gray: #1b1e26;
 }
+
+/* Header */
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--color-primary);
+  align-items: center;
+}
+.header-logo {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.header-logo-img {
+  width: 3.6rem;
+  height: 3.6rem;
+}
+
+.header-logo-title {
+  font-size: 1.8rem;
+}
+
+.header-menu {
+  display: flex;
+  gap: 4px;
+}
+
+.header-menu-item {
+  padding: 8px 16px;
+  font-size: 1.2rem;
+}
+
+.header-menu-item:hover {
+  border-bottom: 1px solid var(--color-accent);
+}
+
+.header-menu-item.active {
+  border: 1px solid var(--color-accent);
+  border-radius: 5px;
+}
