--- a/css/style.css
+++ b/css/style.css
@@ -67,5 +67,51 @@
 
 .header-menu-item.active {
   border: 1px solid var(--color-accent);
-  border-radius: 5px;
+  border-radius: 4px;
+}
+
+/* Home */
+
+#home {
+  background-color: var(--color-primary);
+  color: var(--color-text);
+  padding: 5rem 1rem;
+  padding-top: 8rem;
+  text-align: center;
+}
+
+.home-profile {
+  width: 250px;
+  height: 250px;
+  object-fit: contain;
+  border: 3px solid var(--color-accent);
+  border-radius: 100%;
+  background-color: var(--color-white);
+}
+
+.home-title {
+  font-size: 3rem;
+  margin: 1rem 0;
+}
+.home-title-strong {
+  color: #03e8f9;
+}
+
+.home-description {
+  font-size: 1.5rem;
+}
+
+.home-contact {
+  display: inline-block;
+  background-color: var(--color-accent);
+  padding: 0.6rem 1rem;
+  margin: 2rem;
+  font-weight: bold;
+  color: var(--color-black);
+  border-radius: 4px;
+  font-size: 1.5rem;
+}
+
+.home-contact:hover {
+  opacity: 0.8;
 }
