--- a/css/style.css
+++ b/css/style.css
@@ -69,14 +69,26 @@
   border: 1px solid var(--color-accent);
   border-radius: 4px;
 }
+/* Common */
+.section {
+  padding: 4rem;
+  text-align: center;
+}
+.title {
+  font-size: 2.5rem;
+  margin: 1rem 0;
+}
+.description {
+  font-size: 1.5rem;
+  margin: 0.5rem 0;
+}
 
 /* Home */
 
 #home {
   background-color: var(--color-primary);
   color: var(--color-text);
-  padding: 5rem 1rem;
-  padding-top: 8rem;
+  padding: 8rem 5rem 5rem 1rem;
   text-align: center;
 }
 
@@ -98,7 +110,7 @@
 }
 
 .home-description {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 
 .home-contact {
@@ -109,7 +121,7 @@
   font-weight: bold;
   color: var(--color-black);
   border-radius: 4px;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 
 .home-contact:hover {
