--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@
 }
 
 .home-contact:hover {
-  opacity: 0.8;
+  filter: brightness(150%);
 }
 
 /* About */
@@ -193,4 +193,65 @@
   color: var(--color-primary-variant);
   font-size: 1.5rem;
   padding-right: 0.5rem;
+}
+
+/* Skills */
+
+#skills {
+  background-color: var(--color-primary-variant);
+  color: var(--color-text);
+}
+
+.skills {
+  display: grid;
+  grid-template-columns: 6fr 4fr;
+  margin: 2rem 3rem;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.4);
+}
+.skills-title {
+  color: var(--color-accent);
+  font-size: 1.2rem;
+  margin: 1rem 0;
+}
+
+.skills-coding {
+  grid-row: span 2;
+  padding: 1rem;
+  background-color: var(--color-primary);
+}
+
+.skills-tools {
+  padding: 1rem;
+  background-color: var(--color-primary);
+  filter: brightness(150%);
+}
+.skills-etc {
+  padding: 1rem;
+  background-color: var(--color-primary);
+  filter: brightness(200%);
+}
+
+.skills-bar {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 0.5rem;
+}
+
+.bar-metadata {
+  display: flex;
+  justify-content: space-between;
+}
+
+.bar-bg {
+  width: 100%;
+  height: 4px;
+  background-color: var(--color-primary-variant);
+}
+
+.bar-value {
+  height: 4px;
+  background-color: var(--color-accent);
 }
