--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@
 /* Header */
 .header {
   position: fixed;
+
   top: 0;
   width: 100%;
   padding: 1rem;
@@ -56,6 +57,7 @@
   justify-content: space-between;
   background-color: var(--color-primary);
   align-items: center;
+  z-index: 1;
 }
 .header-logo {
   display: flex;
@@ -253,5 +255,105 @@
 
 .bar-value {
   height: 4px;
+  background-color: var(--color-accent);
+}
+
+/* Projects */
+
+#projects {
+  background-color: var(--color-primary);
+  color: var(--color-text);
+}
+
+.categories {
+  display: flex;
+  justify-content: center;
+  margin: 2.5rem;
+  gap: 1rem;
+}
+.category {
+  position: relative;
+  color: var(--color-text);
+  font-size: 1.1rem;
+  padding: 0.5rem 3rem;
+  border: 1px solid var(--color-accent);
+  border-radius: 4px;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+.category-selected {
+  background-color: var(--color-accent);
+  color: var(--color-primary);
+}
+
+.category-count {
+  opacity: 0;
+  position: absolute;
+  top: -20px;
+  right: 16px;
+  line-height: 28px;
+  width: 28px;
+  height: 28px;
+  background-color: var(--color-accent-variant);
+  color: var(--color-text);
+  border-radius: 100%;
+  transition: all 200ms ease-in;
+}
+
+.category-selected .category-count,
+.category:hover .category-count {
+  opacity: 1;
+  top: 1px;
+}
+
+.projects {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 1rem;
+}
+
+.project {
+  position: relative;
+  border-radius: 8px;
+  overflow: hidden;
+  object-fit: cover;
+}
+.project-img {
+  width: 100%;
+  height: 100%;
+}
+
+.project-meatadata {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-black);
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: all 250ms ease-in;
+  transform: translateY(-10px);
+}
+
+.project-meatadata:hover {
+  opacity: 0.8;
+  transform: translateY(0px);
+}
+
+.project-tilte:after {
+  content: '';
+  display: block;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 0.5rem 0;
+  width: 50px;
+  height: 2px;
   background-color: var(--color-accent);
 }
