--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,20 @@
   --size-max-width: 1200px;
 }
 
+/* scrollbar custom */
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #adabab;
+  border: 2px solid #a3a2a2;
+  border-radius: 10px;
+}
+
 /* Common */
 .section {
   padding: 4rem;
@@ -432,4 +446,91 @@
 }
 .contact-link:hover {
   color: var(--color-accent);
+}
+
+/* 반응형 */
+
+@media screen and (max-width: 768px) {
+  .section {
+    padding: 3rem 2rem;
+  }
+
+  .title {
+    font-size: 2rem;
+  }
+
+  .description {
+    font-size: 1rem;
+  }
+  .header {
+    flex-direction: column;
+    align-items: start;
+  }
+  .header-nav {
+    width: 100%;
+  }
+
+  .header-menu {
+    flex-direction: column;
+    text-align: center;
+    padding: 1rem 4rem;
+    gap: 1rem;
+  }
+  #home {
+    padding-bottom: 3rem;
+  }
+  .home-title {
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .majors {
+    flex-direction: column;
+    align-items: center;
+  }
+  .major {
+    width: 25rem;
+  }
+  .jobs {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 25rem;
+    margin: auto;
+  }
+
+  .skills {
+    grid-template-columns: 1fr;
+  }
+  .categories {
+    flex-direction: column;
+  }
+
+  .category {
+    width: 100%;
+  }
+
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .experience-title {
+    font-size: 1.6rem;
+  }
+  .experience-container {
+    padding: 0;
+  }
+
+  .experience-item-title {
+    font-size: 1.1rem;
+  }
+
+  .arrow-btn {
+    font-size: 2rem;
+    width: 3rem;
+    height: 3rem;
+    bottom: 1.5rem;
+    right: 1.5rem;
+    line-height: 3rem;
+  }
 }
