Feat: JS - home 섹션 스크롤시 투명도 적용 구현

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@
   background: var(--color-white);
 }
 
+::-webkit-scrollbar-thumb:hover {
+  background: var(--color-accent);
+}
+
 ::-webkit-scrollbar-thumb {
   background: #adabab;
   border: 2px solid var(--color-white);
@@ -133,7 +137,7 @@
   margin: 1rem 0;
 }
 .home-title-strong {
-  color: #03e8f9;
+  color: var(--color-accent);
 }
 
 .home-description {
