--- a/css/style.css
+++ b/css/style.css
@@ -433,6 +433,8 @@
   text-align: center;
   line-height: 4.5rem;
   box-shadow: 3px 3px 0px 0px var(--color-accent);
+  opacity: 0;
+  transition: all 300ms ease-in;
 }
 
 /* Footer */
