--- a/css/style.css
+++ b/css/style.css
@@ -337,7 +337,7 @@
 .category-selected .category-count,
 .category:hover .category-count {
   opacity: 1;
-  top: 1px;
+  top: 5px;
 }
 
 .projects {
@@ -345,6 +345,12 @@
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 1rem;
+  transition: all 250ms ease-out;
+}
+
+.projects.animaition {
+  opacity: 0;
+  transform: scale(0.95) translateY(10px);
 }
 
 .project {
@@ -352,6 +358,7 @@
   border-radius: 8px;
   overflow: hidden;
   object-fit: cover;
+  display: block;
 }
 .project-img {
   width: 100%;
