--- a/css/style.css
+++ b/css/style.css
@@ -5,27 +5,45 @@
   /* App Colors */
   --color-primary: var(--color-black);
 
-  --color-primary-variant: var(--color-gray);
+  --color-primary-variant: var(--color-navy);
 
   --color-accent: var(--color-blue);
 
-  --color-accent-variant: var(--color-orange);
+  --color-text-white: var(--color-white);
 
-  --color-text: var(--color-white);
+  --color-text-black: var(--color-black);
+
+  --color-gradient-bg: linear-gradient(
+    180deg,
+    rgba(125, 125, 125, 1) 0%,
+    rgba(5, 10, 19, 1) 61%
+  );
 
   /* Colors */
   --color-white: #ffffff;
 
   --color-black: #050a13;
 
-  --color-blue: #03e8f9;
+  --color-blue: #2fc9eb;
 
-  --color-orange: #fd6413;
+  --color-navy: #1b1e26;
 
-  --color-gray: #1b1e26;
+  --color-pink-light: #f5ebf1;
+
+  --color-pink: #dfb0d2;
+
+  --color-blue-light: #ebf0f5;
+
+  --color-bage: #f1f1ea;
+
+  --color-gray: #dbdbdb;
+
+  --color-gray-light: #f5f5f5;
+
+  --color-gray-dark: #2d2f2f;
 
   /* Sizes */
-  --size-max-width: 1200px;
+  --size-max-width: 1280px;
 }
 
 /* scrollbar custom */
@@ -41,7 +59,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #adabab;
+  background: var(--color-gray);
   border: 2px solid var(--color-white);
   border-radius: 10px;
 }
@@ -78,6 +96,7 @@
   transition: all 300ms ease;
 }
 .header-dark {
+  color: var(--color-text-white);
   background-color: var(--color-primary);
   box-shadow: rgba(0, 0, 0, 0.46) 0px 3px 8px;
 }
@@ -104,15 +123,30 @@
 .header-menu-item {
   padding: 8px 16px;
   font-size: 1.2rem;
-  border-bottom: 1px solid transparent;
-}
-
-.header-menu-item:hover {
-  border-bottom: 1px solid var(--color-accent);
 }
 
 .header-menu-item.active {
-  border: 1px solid var(--color-accent);
+  background-color: var(--color-primary);
+  outline: 1px solid var(--color-text-black);
+  color: var(--color-text-white);
+  border-radius: 4px;
+}
+
+.header-menu-item:hover {
+  outline: 1px solid var(--color-text-black);
+  border-radius: 4px;
+}
+
+.header-menu-item.header-dark:hover {
+  outline: 1px solid var(--color-text-white);
+  border-radius: 4px;
+}
+
+.header-menu-item.header-dark.active {
+  font-weight: bold;
+  background-color: var(--color-text-white);
+  outline: 1px solid var(--color-text-white);
+  color: var(--color-text-black);
   border-radius: 4px;
 }
 
@@ -128,17 +162,39 @@
 /* Home */
 
 #home {
-  background-color: var(--color-primary-variant);
-  color: var(--color-text);
+  position: relative;
+  background-color: var(--color-gray-light);
+  color: var(--color-text-black);
   padding: 8rem 5rem 5rem 1rem;
   text-align: center;
+}
+
+.home-devider {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.home-devider svg {
+  position: relative;
+  display: block;
+  width: calc(149% + 1.3px);
+  height: 99px;
+}
+
+.home-devider .shape-fill {
+  fill: #ffffff;
 }
 
 .home-profile {
   width: 250px;
   height: 250px;
   object-fit: contain;
-  border: 3px solid var(--color-accent);
+  border: 5px solid var(--color-primary);
   border-radius: 100%;
   background-color: var(--color-white);
 }
@@ -146,9 +202,11 @@
 .home-title {
   font-size: 3rem;
   margin: 1rem 0;
+  color: var(--color-primary-variant);
+  filter: brightness(200%);
 }
 .home-title-strong {
-  color: var(--color-accent);
+  color: var(--color-text-black);
 }
 
 .home-description {
@@ -157,19 +215,19 @@
 
 .home-contact {
   display: inline-block;
-  background-color: var(--color-accent);
+  background-color: var(--color-text-black);
   padding: 0.6rem 1rem;
   margin: 2rem;
   font-weight: bold;
-  color: var(--color-black);
+  color: var(--color-text-white);
   border-radius: 4px;
   font-size: 1.3rem;
+  transition: all 250ms ease;
 }
 
 .home-contact:hover {
-  filter: brightness(150%);
+  transform: scale(1.1);
 }
-
 /* About */
 
 .majors {
@@ -180,9 +238,9 @@
 }
 .major {
   flex: 1;
-  background-color: var(--color-primary-variant);
+  background-color: var(--color-gray-dark);
   padding: 2rem 1rem;
-  color: var(--color-text);
+  color: var(--color-text-white);
   border-radius: 1rem;
   cursor: default;
   box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.4);
@@ -216,11 +274,11 @@
 }
 
 .job-name {
-  color: var(--color-primary);
+  color: var(--color-text-black);
 }
 
 .job-period {
-  color: var(--color-primary);
+  color: var(--color-text-black);
   font-size: 0.8rem;
 }
 
@@ -233,8 +291,8 @@
 /* Skills */
 
 #skills {
-  background-color: var(--color-primary-variant);
-  color: var(--color-text);
+  background-color: var(--color-bage);
+  color: var(--color-text-black);
 }
 
 .skills {
@@ -243,10 +301,10 @@
   margin: 2rem 3rem;
   border-radius: 8px;
   overflow: hidden;
+  color: var(--color-text-white);
   box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.4);
 }
 .skills-title {
-  color: var(--color-accent);
   font-size: 1.2rem;
   margin: 1rem 0;
 }
@@ -254,17 +312,17 @@
 .skills-coding {
   grid-row: span 2;
   padding: 1rem;
-  background-color: var(--color-primary);
+  background-color: var(--color-primary-variant);
 }
 
 .skills-tools {
   padding: 1rem;
-  background-color: var(--color-primary);
+  background-color: var(--color-primary-variant);
   filter: brightness(150%);
 }
 .skills-etc {
   padding: 1rem;
-  background-color: var(--color-primary);
+  background-color: var(--color-primary-variant);
   filter: brightness(200%);
 }
 
@@ -283,7 +341,7 @@
 .bar-bg {
   width: 100%;
   height: 4px;
-  background-color: var(--color-primary-variant);
+  background-color: var(--color-text-black);
 }
 
 .bar-value {
@@ -294,8 +352,8 @@
 /* Projects */
 
 #projects {
-  background-color: var(--color-primary);
-  color: var(--color-text);
+  background-color: var(--color-pink-light);
+  color: var(--color-text-black);
 }
 
 .categories {
@@ -306,18 +364,19 @@
 }
 .category {
   position: relative;
-  color: var(--color-text);
+  color: var(--color-text-black);
+  background-color: var(--color-text-white);
   font-size: 1.1rem;
   padding: 0.5rem 3rem;
-  border: 1px solid var(--color-accent);
+  border: 1px solid var(--color-text-black);
   border-radius: 4px;
   cursor: pointer;
   white-space: nowrap;
 }
 
 .category-selected {
-  background-color: var(--color-accent);
-  color: var(--color-primary);
+  background-color: var(--color-text-black);
+  color: var(--color-text-white);
 }
 
 .category-count {
@@ -328,7 +387,7 @@
   line-height: 28px;
   width: 28px;
   height: 28px;
-  background-color: var(--color-accent-variant);
+  background-color: var(--color-accent);
   color: var(--color-text);
   border-radius: 100%;
   transition: all 200ms ease-in;
@@ -359,6 +418,7 @@
   overflow: hidden;
   object-fit: cover;
   display: block;
+  box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.4);
 }
 .project-img {
   width: 100%;
@@ -371,7 +431,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--color-black);
+  background-color: var(--color-primary);
+  color: var(--color-white);
   opacity: 0;
   display: flex;
   flex-direction: column;
@@ -386,7 +447,7 @@
   transform: translateY(0px);
 }
 
-.project-tilte:after {
+.project-tilte::after {
   content: '';
   display: block;
   position: relative;
@@ -419,7 +480,6 @@
 }
 
 .experience-item {
-  background-color: #f0f0f0;
   width: 100%;
   padding: 2rem 3rem;
   display: flex;
@@ -429,18 +489,28 @@
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
+.experience-item.award {
+  background-color: var(--color-blue-light);
+}
+
+.experience-item.certificate {
+  background-color: var(--color-bage);
+}
 .experience-item-title {
   font-size: 1.2rem;
 }
 .experience-item-strong {
-  color: var(--color-accent);
-  filter: brightness(70%);
+  color: var(--color-primary-variant);
+  filter: brightness(150%);
 }
 
 /*Arrow Button */
 
 .arrow-btn {
-  background-color: var(--color-primary);
+  z-index: 1;
+  background-color: var(--color-text-black);
+  color: var(--color-text-white);
   position: fixed;
   bottom: 3rem;
   right: 3rem;
@@ -450,7 +520,7 @@
   border-radius: 100%;
   text-align: center;
   line-height: 4.5rem;
-  box-shadow: 3px 3px 0px 0px var(--color-accent);
+  box-shadow: 3px 3px 0px 0px var(--color-text-white);
   opacity: 0;
   transition: all 300ms ease-in;
 }
@@ -458,8 +528,29 @@
 /* Footer */
 
 #contact {
+  position: relative;
   background-color: var(--color-primary);
-  color: var(--color-text);
+  color: var(--color-text-white);
+  padding-top: 150px;
+}
+.custom-shape-divider-top-1694382660 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-top-1694382660 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 150px;
+}
+
+.custom-shape-divider-top-1694382660 .shape-fill {
+  fill: #ffffff;
 }
 
 .contact-links {
@@ -493,7 +584,8 @@
   .header {
     flex-direction: column;
     align-items: start;
-    background-color: var(--color-primary);
+    background-color: var(--color-text-black);
+    color: var(--color-text-white);
   }
   .header-nav {
     width: 100%;
