--- a/css/style.css
+++ b/css/style.css
@@ -1,68 +1,5 @@
 @import 'reset.css';
-
-/* Global */
-:root {
-  /* App Colors */
-  --color-primary: var(--color-black);
-
-  --color-primary-variant: var(--color-navy);
-
-  --color-accent: var(--color-blue);
-
-  --color-text-white: var(--color-white);
-
-  --color-text-black: var(--color-black);
-
-  --color-gradient-bg: linear-gradient(
-    180deg,
-    rgba(125, 125, 125, 1) 0%,
-    rgba(5, 10, 19, 1) 61%
-  );
-
-  /* Colors */
-  --color-white: #ffffff;
-
-  --color-black: #050a13;
-
-  --color-blue: #2fc9eb;
-
-  --color-navy: #1b1e26;
-
-  --color-pink-light: #f5ebf1;
-
-  --color-pink: #dfb0d2;
-
-  --color-blue-light: #ebf0f5;
-
-  --color-bage: #f1f1ea;
-
-  --color-gray: #dbdbdb;
-
-  --color-gray-light: #f5f5f5;
-
-  --color-gray-dark: #2d2f2f;
-
-  /* Sizes */
-  --size-max-width: 1280px;
-}
-
-/* scrollbar custom */
-::-webkit-scrollbar {
-  width: 12px;
-}
-::-webkit-scrollbar-track {
-  background: var(--color-white);
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: var(--color-accent);
-}
-
-::-webkit-scrollbar-thumb {
-  background: var(--color-gray);
-  border: 2px solid var(--color-white);
-  border-radius: 10px;
-}
+@import 'root.css';
 
 /* Common */
 .section {
@@ -509,7 +446,7 @@
 
 .arrow-btn {
   z-index: 1;
-  background-color: var(--color-text-black);
+  background-color: var(--color-accent);
   color: var(--color-text-white);
   position: fixed;
   bottom: 3rem;
@@ -520,9 +457,9 @@
   border-radius: 100%;
   text-align: center;
   line-height: 4.5rem;
-  box-shadow: 3px 3px 0px 0px var(--color-text-white);
   opacity: 0;
   transition: all 300ms ease-in;
+  box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.4);
 }
 
 /* Footer */
