--- a/css/style.css
+++ b/css/style.css
@@ -443,9 +443,10 @@
 .projects {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(1, 1fr);
   gap: 1rem;
   transition: all 250ms ease-out;
+  margin: 4rem 0;
 }
 
 .projects.animaition {
@@ -498,6 +499,10 @@
   width: 50px;
   height: 2px;
   background-color: var(--color-accent);
+}
+
+.description-item {
+  display: none;
 }
 
 /* Other Experience */
