Design: CSS - projects 설명 섹션 스타일링

--- a/css/style.css
+++ b/css/style.css
@@ -506,6 +506,98 @@
   display: none;
 }
 
+.description-container {
+  display: grid;
+  grid-template-columns: 4fr 6fr;
+  border-radius: 8px;
+  overflow: hidden;
+  margin: 4rem 0;
+  box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.4);
+  background-color: var(--color-text-white);
+}
+
+.description-content {
+  padding: 2rem 1.5rem;
+  color: var(--color-text-white);
+  background-color: var(--color-primary-variant);
+}
+.description-content.information {
+  grid-row: span 2;
+  font-size: 1.2rem;
+}
+
+.description-content.purpose {
+  filter: brightness(130%);
+  font-size: 1.1rem;
+}
+.description-content.detail {
+  filter: brightness(160%);
+  font-size: 1.1rem;
+}
+.description-briefly {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  padding-bottom: 4rem;
+}
+.description-briefly-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: var(--color-blue-light);
+  color: var(--color-text-black);
+  text-align: left;
+  margin: 0 1.5rem;
+  padding: 1.5rem 1rem;
+  border-radius: 8px;
+}
+
+.description-title {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+.description-project-img {
+  height: auto;
+  width: 20rem;
+  border-radius: 4px;
+}
+.description-btn-container {
+  margin: 1rem auto;
+  display: flex;
+  gap: 1rem;
+}
+
+.description-btn {
+  background-color: var(--color-accent);
+  padding: 0.5rem 1.5rem;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  transition: all 250ms ease;
+}
+
+.description-btn:hover {
+  transform: scale(1.1);
+}
+.description-content-title {
+  font-size: 1.2rem;
+  text-align: left;
+}
+
+.description-text {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  text-align: left;
+  margin-bottom: 1rem;
+}
+.description-text-strong {
+  font-size: 1.2rem;
+}
+
 /* Other Experience */
 #otherExperience {
   position: relative;
@@ -702,6 +794,10 @@
 
   .projects {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .description-container {
+    grid-template-columns: 1fr;
   }
 
   .experience-title {
