Dseign : CSS - grid 내부 색상 filter 사용없이 색상 지정

--- a/css/root.css
+++ b/css/root.css
@@ -24,6 +24,10 @@
 
   --color-blue: #2fc9eb;
 
+  --color-navy-bright: #353a4a;
+
+  --color-navy-light: #262a36;
+
   --color-navy: #1b1e26;
 
   --color-pink-light: #f5ebf1;
